# backend/src/Application/Game/WebSocket/GameWebsocketMessageHandler.php
@@ -19,6 +19,7 @@ final readonly class GameWebsocketMessageHandler
         'card.dungeon_marker.changed',
         'cards.position.changed',
         'card.tapped',
+        'cards.tapped.set',
         'card.moved',
         'cards.moved',
         'zone.changed',
@@ -38,6 +39,7 @@ final readonly class GameWebsocketMessageHandler
         'library.put_top',
         'library.put_bottom',
         'card.face_down.changed',
+        'cards.face_down.set',
         'card.face.changed',
         'card.revealed',
         'hand.cards.reveal',
